Added Dynamo driver and added api for user creation
