# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -18,6 +18,28 @@ consumes:
 produces:
   - application/json
 paths:
+  /users:
+    x-swagger-router-controller: users_controller
+    post:
+      description: Create new User in database
+      operationId: newUser
+      parameters:
+        - name: user
+          in: body
+          description: The email of the user
+          required: false
+          schema:
+            $ref: "#/definitions/CreateUserRequest"
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/CreateUserResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -46,6 +68,24 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  CreateUserRequest:
+    required:
+      - email
+      - name
+      - password
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+  CreateUserResponse:
+    required:
+      - userId
+    properties:
+      userId:
+        type: string
   HelloWorldResponse:
     required:
       - message
